[project]
name = "line-plot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ryoppippi", email = "1560508+ryoppippi@users.noreply.github.com" }
]
dependencies = [
    "pandas>=2.0.3",
    "plotly>=5.18.0",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
